test/testData/parser/negative/declspec.c


static static int x1;
extern static int x2;
typedef static int x3;
static int x4;


int testSS() {
  register register int x5;
  static register int x6;
  register extern int x7;
}

const static const int c1;// = 10;

unsigned signed int us;
signed unsigned int su;

short long int sl;
long short int ls;

long long short int lls;
short long long int sll;

long short long int lsl;

volatile int volatile static x;

void int vi;
double float df;
int char ic;

void int double char float vidcf;

